fix del z-index

--- a/tdl-app/src/components/Utensils/Utensils.css
+++ b/tdl-app/src/components/Utensils/Utensils.css
@@ -23,3 +23,6 @@
     justify-content: center;
 }
 
+.icon {
+    width: 30px;
+}
